--- a/client/partial/movies/movieTable.html
+++ b/client/partial/movies/movieTable.html
@@ -5,7 +5,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="movie in movies">
+        <tr ng-repeat="movie in movies | orderBy:'title'">
             <td>
                 <a href="#" ng-href="/movies/{{movie.id}}">
                     {{movie.title}}
@@ -14,4 +14,4 @@
         </tr>
     </tbody>
 </table>
-    
+
