--- a/client/partial/movies/movieTable.html
+++ b/client/partial/movies/movieTable.html
@@ -1,11 +1,11 @@
    <table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>Title</th>
+            <th><a href="" ng-click="predicate = 'title'; reverse=!reverse">Title</a>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="movie in movies">
+        <tr ng-repeat="movie in movies | orderBy:predicate = 'title'">
             <td>
                 <a href="#" ng-href="/movies/{{movie.id}}">
                     {{movie.title}}
@@ -14,4 +14,4 @@
         </tr>
     </tbody>
 </table>
-    
+
