[UPDATE] Add year of release to new movies. Existing movies have unknown if field is not set.

--- a/client/partial/movies/_form.html
+++ b/client/partial/movies/_form.html
@@ -21,6 +21,17 @@
       </textarea>
     </div>
   </div>
+  <div class="control-group">
+    <label class="control-label" for="inputReleaseYear">Year of release</label>
+    <div class="controls">
+      <input type="text"
+             id="inputReleaseYear"
+             name="releaseYear"
+             class="input-block-level"
+             autofocus
+             ng-model="movie.releaseYear">
+    </div>
+  </div>
   <div class="form-actions">
     <button type="submit"
             class="btn btn-primary"
