--- a/client/partial/movies/movieTable.html
+++ b/client/partial/movies/movieTable.html
@@ -2,6 +2,7 @@
     <thead>
         <tr>
             <th><a href="" ng-click="predicate = 'title'; reverse=!reverse">Title</a>
+            <th><a href="" ng-click="predicate = 'releaseYear'; reverse=!reverse">Year of release</a>
         </tr>
     </thead>
     <tbody>
@@ -9,6 +10,11 @@
             <td>
                 <a href="#" ng-href="/movies/{{movie.id}}">
                     {{movie.title}}
+                </a>
+            </td>
+            <td>
+                <a href="#" ng-href="/movies/{{movie.releaseYear}}">
+                    {{movie.releaseYear || 'unknown'}}
                 </a>
             </td>
         </tr>
