--- a/client/partial/movies/list.html
+++ b/client/partial/movies/list.html
@@ -1,7 +1,7 @@
 <h1>Movie List</h1>
 
 <p>
-    <a class="btn btn-primary" ng-href="add()">Add Movie</a>
+    <a class="btn btn-primary" ng-click="add()">Add Movie</a>
 </p>
 
 <div ng-include="'/partial/movies/movieTable.html'"></div>
